Tried to fix theme, fonts etc. FIX NEEDED

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "strict": true,
     "paths": {
       "@/*": [
-        "./*"
+        "./*",  
       ]
-    }
+    },
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": [
     "**/*.ts",
