--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/styled-components-react-native": "^5.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "^5.8.3"
