--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
