--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linking": "~7.1.7",
-    "expo-module-scripts": "^4.1.9",
     "expo-router": "~5.1.3",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.10",
@@ -43,11 +42,11 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "styled-components": "^6.1.19",
-    "react-native-svg": "15.11.2"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
