--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
     "eslint-config-expo": "~9.2.0",
     "typescript": "^5.8.3"
   },
+  "overrides": {
+    "glob": "file:vendor/glob",
+    "rimraf": "file:vendor/rimraf",
+    "inflight": "file:vendor/inflight"
+  },
   "private": true
 }
