--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,16 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    // Enable resolution of modules using the "@" prefix
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*",  
+        "./*"
       ]
-    }
+    },
+    // Allow default React imports and JSX in TypeScript files
+    "esModuleInterop": true,
+    "jsx": "react-native"
   },
   "include": [
     "**/*.ts",
