Refactor random key generation and clean unused types (#77)
* refactor: drop deprecated expo-random and unused RN types

* chore: drop unused expo module scripts

* Vendor deprecated packages

* Enable JSX and default imports in TypeScript

* Fix lint errors

* Fix remaining warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,24 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    // Enable resolution of modules using the "@" prefix
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*",  
+        "./*"
       ]
-    }
+    },
+    // Allow default React imports and JSX in TypeScript files
+    "esModuleInterop": true,
+    "jsx": "react-native"
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
+  ],
+  "exclude": [
+    "scripts/__tests__"
   ]
 }
