--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linking": "~7.1.7",
-    "expo-module-scripts": "^4.1.9",
-    "expo-random": "^14.0.1",
     "expo-router": "~5.1.3",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.10",
@@ -44,24 +42,26 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "styled-components": "^6.1.19",
-    "react-native-svg": "15.11.2"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^19.1.8",
-    "@types/react-native": "^0.73.0",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/styled-components-react-native": "^5.2.5",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "glob": "file:vendor/glob",
+    "rimraf": "file:vendor/rimraf",
+    "inflight": "file:vendor/inflight"
   },
   "private": true
 }
