fix: remove vendor overrides and add glob dependency

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.15.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "glob": "^10.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -57,11 +58,6 @@
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "^5.8.3"
-  },
-  "overrides": {
-    "glob": "file:vendor/glob",
-    "rimraf": "file:vendor/rimraf",
-    "inflight": "file:vendor/inflight"
   },
   "private": true
 }
