--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start -c",
+    "start": "npx expo start -c",
     "build:google-play": "npx expo prebuild && npx eas build -p android",
     "build:testing": "eas build -p android --profile testing",
     "reset-project": "node ./scripts/reset-project.js",
@@ -13,19 +13,19 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/drawer": "^7.5.3",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.5.2",
-    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native": "^7.1.6",
     "crypto-js": "^4.2.0",
     "expo": "^53.0.19",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-secure-store": "^14.2.3",
@@ -34,34 +34,27 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.80.1",
-    "react-native-async-storage": "^0.0.1",
-    "react-native-gesture-handler": "~2.27.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "~4.12.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "13.13.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@types/crypto-js": "^4.2.2",
-    "@types/react": "^19.1.8",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "^5.8.3"
-  },
-  "overrides": {
-    "glob": "file:vendor/glob",
-    "rimraf": "file:vendor/rimraf",
-    "inflight": "file:vendor/inflight"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
