--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint --fix"
   },
   "dependencies": {
+    "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
