--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:google-play": "npx expo prebuild && npx eas build -p android",
     "build:testing": "eas build -p android --profile testing",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
+    "build:apk": "npx expo prebuild --non-interactive && cd android && ./gradlew assembleRelease",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint --fix"
