--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
