--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,13 @@
     // Enable resolution of modules using the "@" prefix
     "baseUrl": ".",
     "paths": {
+      "@screens/*": ["src/screens/*"],
       "@components/*": ["src/components/*"],
-      "@utils/*": ["src/utils/*"],
       "@constants/*": ["src/constants/*"],
-      "@assets/*": ["assets/*"],
       "@hooks/*": ["src/hooks/*"],
+      "@store/*": ["src/store/*"],
+      "@assets/*": ["assets/*"],
+      "@utils/*": ["src/utils/*"],
       "@settings/*": ["src/settings/*"],
       "@theme/*": ["src/theme/*"],
       "@storage/*": ["src/storage/*"]
