--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,15 @@
     "paths": {
       "@screens/*": ["src/screens/*"],
       "@components/*": ["src/components/*"],
-      "@constants/*": ["src/constants/*"],
       "@hooks/*": ["src/hooks/*"],
       "@store/*": ["src/store/*"],
       "@assets/*": ["assets/*"],
       "@utils/*": ["src/utils/*"],
-      "@settings/*": ["src/settings/*"],
       "@theme/*": ["src/theme/*"],
       "@storage/*": ["src/storage/*"],
       "@types/*": ["src/types/*"],
-      "@types": ["src/types"]
+      "@types": ["src/types"],
+      "@config/*": ["src/config/*"]
     },
     // Allow default React imports and JSX in TypeScript files
     "esModuleInterop": true,
