--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx expo start -c --config app.config.js",
-    "build:google-play": "npx expo prebuild --config app.config.js && npx eas build -p android --config src/config/eas.json",
-    "build:testing": "eas build -p android --profile testing --config src/config/eas.json",
+    "start": "npx expo start -c",
+    "build:google-play": "npx expo prebuild && npx eas build -p android",
+    "build:testing": "eas build -p android --profile testing",
     "reset-project": "node ./scripts/reset-project.js",
-    "build:apk": "expo run:android --config app.config.js",
-    "ios": "expo run:ios --config app.config.js",
-    "web": "expo start --web --config app.config.js",
-    "lint": "expo lint --config src/config/eslint.config.mjs --fix"
+    "build:apk": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "expo lint --fix"
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
