--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:apk": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint --fix"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config src/config/eslint.config.mjs --fix"
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
