--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,11 @@
     "expo-env.d.ts"
   ],
   "exclude": [
-    "scripts/__tests__"
+    "scripts/__tests__",
+    "vendor",
+    "dist",
+    "build",
+    "coverage",
+    "**/generated"
   ]
 }
