--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
+    "@eslint/eslintrc": "^3.1.0",
     "typescript": "~5.8.3"
   },
   "private": true
