--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:apk": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint --fix"
+    "lint": "expo lint --fix",
+    "test": "npx jest"
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
