--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:apk": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint --fix",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config eslint.config.mjs --fix",
     "test": "npx jest"
   },
   "dependencies": {
