--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build:apk": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint --fix",
-    "test": "npx jest"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config eslint.config.mjs",
+    "test": "jest",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
