--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "cross-env BABEL_CONFIG_FILE=config/babel.config.js npx expo start -c --config config/app.json",
+    "start": "cross-env BABEL_CONFIG_FILE=config/babel.config.js npx expo start -c",
     "build:google-play": "BABEL_CONFIG_FILE=config/babel.config.js npx expo prebuild --config config/app.json && BABEL_CONFIG_FILE=config/babel.config.js npx eas build -p android --config config/eas.json",
     "build:testing": "BABEL_CONFIG_FILE=config/babel.config.js eas build -p android --profile testing --config config/eas.json",
     "build:apk": "BABEL_CONFIG_FILE=config/babel.config.js expo run:android --config config/app.json",
@@ -22,19 +22,19 @@
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.6",
     "crypto-js": "^4.2.0",
-    "expo": "^53.0.19",
+    "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
