--- a/package.json
+++ b/package.json
@@ -53,15 +53,16 @@
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
-    "eslint-config-expo": "~9.2.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
-    "typescript": "~5.8.3"
+    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.0.0"
   },
   "private": true
 }
