chore: update eslint config for typed rules

--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "typescript-eslint": "^8.39.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
