Fix dependencies and tsconfig ignore list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,8 @@
     "dist",
     "build",
     "coverage",
-    "**/generated/**"
+    "**/generated/**",
+    "ChatGPT/",
+    "ChatGPT.zip"
   ]
 }
