refactor: fix input field accessibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     },
     // Allow default React imports and JSX in TypeScript files
     "esModuleInterop": true,
-    "jsx": "react-native"
+    "jsx": "react-native",
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
