--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config src/config/eslint.config.mjs",
     "test": "jest",
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "files:ts-over-105": "node scripts/tools/list-long-ts.cjs"
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
