Fix font source imports and add assets alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "src/types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules",
