chore(settings): expose provider navigator to router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,9 @@
       ],
       "@types": [
         "src/types"
+      ],
+      "@features/*": [
+        "src/features/*"
       ]
     },
     "esModuleInterop": true,
