Add basic-checks script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gen:fonts": "node scripts/generate-font-files.cjs",
     "gen:fonts:check": "node scripts/generate-font-files.cjs --check",
     "long-files-detector": "node scripts/tools/list-long-ts.cjs",
-    "expo-doctor": "npx expo install --check && npx -y expo-doctor"
+    "basic-checks": "npx expo install --check && npm run lint && npm run typecheck && npx -y expo-doctor"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
