--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
       "@storage/*": [
         "src/storage/*"
       ],
+      "@features/*": [
+        "src/features/*"
+      ],
       "@types/*": [
         "src/types/*"
       ],
