feat: maintain anchor position on settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,9 @@
       "@settings/*": [
         "src/settings/*"
       ],
+      "@features/*": [
+        "src/features/*"
+      ],
       "@theme/*": [
         "src/theme/*"
       ],
