--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config src/config/eslint.config.mjs",
-    "test": "jest",
+    "unit-tests": "jest",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "gen:fonts": "node scripts/generate-font-files.cjs",
     "gen:fonts:check": "node scripts/generate-font-files.cjs --check",
@@ -32,7 +32,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
+    "expo-router": "~5.1.6",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
