--- a/package.json
+++ b/package.json
@@ -69,10 +69,12 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "jest": "^29.7.0",
+    "jest-cucumber": "^4.5.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1"
+    "typescript-eslint": "^8.39.1",
+    "react-test-renderer": "^19.0.0"
   },
   "expo": {
     "doctor": {
