chore: add tests alias and scroll event helper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,9 @@
       ],
       "@types": [
         "src/types"
+      ],
+      "@tests/*": [
+        "tests/*"
       ]
     },
     "esModuleInterop": true,
