--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "module": "commonjs"
+    "module": "commonjs",
+    "paths": {
+      "@tests/*": ["tests/*"]
+    }
   },
   "include": ["src", "tests"]
 }
