--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "react-test-renderer": "^19.0.0"
+    "react-test-renderer": "19.0.0"
   },
   "expo": {
     "doctor": {
