--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.6",
-    "crypto-js": "^4.2.0",
-    "expo": "53.0.22",
+    "expo": "~53.0.25",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
@@ -41,7 +40,7 @@
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-portalize": "file:vendor/react-native-portalize",
     "react-native-reanimated": "~3.17.4",
@@ -54,7 +53,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
-    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
@@ -70,11 +68,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "jest": "^29.7.0",
     "jest-cucumber": "^4.5.0",
+    "react-test-renderer": "19.0.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "react-test-renderer": "19.0.0"
+    "typescript-eslint": "^8.39.1"
   },
   "expo": {
     "doctor": {
