--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1"
+    "typescript-eslint": "^8.39.1",
+    "eas-cli": "file:vendor/eas-cli"
   },
   "expo": {
     "doctor": {
