--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eas-cli": "^13.8.2",
     "jest": "^29.7.0",
     "jest-cucumber": "^4.5.0",
     "react-test-renderer": "19.0.0",
