--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --config src/config/eslint.config.mjs",
-    "unit-tests": "jest",
+    "unit-tests": "node scripts/tools/forbid-jest-tests.cjs && jest",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "gen:fonts": "node scripts/generate-font-files.cjs",
     "gen:fonts:check": "node scripts/generate-font-files.cjs --check",
