Adjust selectable row layout and add BDD tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,7 +54,11 @@
     },
     "esModuleInterop": true,
     "jsx": "react-native",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "**/*.ts",
